[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Denis Rosset <physics@denisrosset.com>"]
description = "Root finder pedagogical example"
license = "MIT"
name = "rootexample"
readme = "README.rst"
repository = "https://github.com/denisrosset/rootexample.git"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
pytest = "^7.0.1"
pytest-black = "^0.3.12"
pytest-mypy-plugins = "^1.9.3"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
python_version = "3.8"

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--tb=short",
]

# removed coverage as it interferes with debugging
# "--cov=result",  # "--cov=tests",  # "--cov-report=term",
# "--cov-report=xml",

testpaths = [
  "tests",
]

[tool.black]
line-length = 99
target_version = ['py38']

[tool.isort]
line_length = 99
profile = "black"
py_version = 38
